src/objects/Consult_Camera_Video__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consult Camera Videos</relationshipLabel>
        <relationshipName>Consult_Camera_Videos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_Token__c</fullName>
        <label>Confirmation Token</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_URL_Link__c</fullName>
        <label>Consult URL Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Consult Camera Videos</relationshipLabel>
        <relationshipName>Consult_Camera_Videos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PEC_Access_URL__c</fullName>
        <description>Url that can be used by the PEC to directly view this consult video</description>
        <label>PEC Access URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Video_ID__c</fullName>
        <label>Video ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Consult Camera Video</label>
    <nameField>
        <displayFormat>CCN-{0000}</displayFormat>
        <label>Consult Camera Video Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consult Camera Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>